<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/drawer_order_by_os"
        android:orderInCategory="100"
        android:title="@string/action_order_by_os"
        app:showAsAction="never" />
    <item
        android:id="@+id/drawer_order_by_favourite"
        android:orderInCategory="101"
        android:title="@string/action_order_by_favourite" />
    <item
        android:id="@+id/drawer_order_by_status"
        android:orderInCategory="102"
        android:title="@string/action_order_by_status" />
    <item
        android:id="@+id/drawer_order_by_date"
        android:orderInCategory="103"
        android:title="@string/action_order_by_date" />
</menu>
