<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/ic_overview"
            android:title="@string/drawer_overview" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_servers_location"
            android:title="@string/drawer_location" />
        <item
            android:id="@+id/nav_backups"
            android:icon="@drawable/ic_cloud"
            android:title="@string/drawer_backups" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/drawer_settings"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
