<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.herem1t.rc_client.ServerInfo.AddDescriptionActivity"
    tools:layout_editor_absoluteY="0dp"
    tools:layout_editor_absoluteX="0dp"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <EditText
        android:id="@+id/et_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:maxLength="150"
        android:hint="@string/server_description_placeholder"
        app:layout_constraintBottom_toBottomOf="@+id/iv_description"
        app:layout_constraintTop_toTopOf="@+id/iv_description"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/iv_description"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/mybutton"
        android:text="@string/adding_server_add"
        android:textColor="#ffffff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_cancel_descr"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <Button
        android:id="@+id/btn_cancel_descr"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/mybutton_cancel"
        android:text="@string/adding_server_cancel"
        app:layout_constraintLeft_toRightOf="@+id/btn_add"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />







    <LinearLayout
        android:id="@+id/header_image_layout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/earth_curve"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintLeft_toLeftOf="parent">

    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"
        tools:layout_editor_absoluteY="204dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline9"
        app:layout_constraintGuide_percent="0.8"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="409dp"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/iv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_description"
        app:layout_constraintRight_toLeftOf="@+id/et_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        android:layout_marginTop="32dp" />

</android.support.constraint.ConstraintLayout>
