<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.herem1t.rc_client.ServerInfo.ChangeDescriptionActivity">


    <Button
        android:id="@+id/btn_cd_save"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/mybutton"
        android:text="@string/update_server_save"
        android:textColor="#ffffff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_cd_cancel"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <Button
        android:id="@+id/btn_cd_cancel"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/mybutton_cancel"
        android:text="@string/update_server_cancel"
        app:layout_constraintLeft_toRightOf="@+id/btn_cd_save"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"
        tools:layout_editor_absoluteY="181dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline8"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="362dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_cardview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43"
        tools:layout_editor_absoluteY="181dp"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/header_image_layout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/earth_curve"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/header_image_layout"
        app:layout_constraintRight_toLeftOf="@+id/header_image_layout"
        app:layout_constraintBottom_toTopOf="@+id/guideline_cardview"
        android:id="@+id/cardView">

        <TextView
            android:id="@+id/tv_cd_ip"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:text="TextView"
            android:textColor="@color/actionBarColor"
            android:textSize="20sp" />
    </android.support.v7.widget.CardView>

    <EditText
        android:id="@+id/et_cd_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:maxLength="150"
        android:hint="@string/server_description_placeholder"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/iv_description"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_cd_save"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <ImageView
        android:id="@+id/iv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_description"
        app:layout_constraintRight_toLeftOf="@+id/et_cd_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/btn_cd_save"
        app:layout_constraintTop_toBottomOf="@+id/header_image_layout" />

</android.support.constraint.ConstraintLayout>
